<?xml version="1.0" encoding="utf-8"?>



<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardElevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/text_view_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/title"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constrainedWidth="true"


            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_view_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_body_of_this_note"
            app:layout_constraintHorizontal_bias="0"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />



            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90"/>





    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>